# s2n_quic_latency_reproducer

./: README.md
client/: Cargo.toml
client/libs/: hbb_common
client/src/: main.rs
hbb_common/: Cargo.toml
hbb_common/protos/: message.proto
hbb_common/src/: compress.rs  lib.rs  quic.rs  udp.rs
server/: Cargo.toml
server/src/: main.rs
